# ClaudeMonitor

./: .gitignore  README.md  config.json  index.html  install.md  launchd_install.sh  launcher.py  pyproject.toml  run.sh  server.py  tui.py
ClaudeMonitor.app/Contents/: Info.plist
ClaudeMonitor.app/Contents/MacOS/: ClaudeMonitor.template
ClaudeMonitor.app/Contents/Resources/: icon.icns
